# bity-8

./: .gitignore  Cargo.toml  README.adoc  README.md  TODO.txt
alan/: bity-8-font.xcf
alan/handmade/code/: build.sh  handmadehero  sdl_handmade.cpp
alan/lua_embed/: Makefile  a.out  main.cpp  test.lua
assets/: drawing.lua  test.lua
bity-8/: Cargo.toml
bity-8-tools/: Cargo.toml  README.md
bity-8-tools/assets/: stdin_to_hex.py
bity-8-tools/src/: lib.rs  main.rs  palette.rs  spritesheet.rs
bity-8/assets/: alan_test.b8  cartridge_code_only.b8  compile_cart  hex_to_bin  spritesheet.sht
bity-8/assets/alan_test/: comp.sh  measure.mes  measure.txt  out.b8  test.lua  tile.map
bity-8/assets/circ_spiral/: out.b8  test.lua
bity-8/assets/color_pillar/: out.b8  test.lua
bity-8/assets/demo/: drawing.lua  measure.mes  measure.txt  tilemap.map
bity-8/assets/dna/: comp.sh  out.b8  (+1 more)
bity-8/doc/: goals.txt  memory.txt  specs.txt
bity-8/src/: audio.rs  cartridge.rs  display.rs  emulator.rs  lib.rs  main.rs  memory.rs
doc/: cart.txt  goals.txt  memory.txt  rust-cheat-sheet.txt  specs.txt  tilemap.txt  todo.txt
engine/: README.md
engine/assets/: drawing.lua  test.lua
engine/doc/: cart.txt  tilemap.txt
engine/src/: cartridge.rs  emulator.rs  main.rs
src/: README.txt  audio.rs  cartridge.rs  display.rs  emulator.rs  lib.rs  lua.rs  main.rs  memory.rs  test.lua
src/bity-8/: Cargo.toml
src/engine/: audio.rs  display.rs  emulator.rs  lib.rs  memory.rs
src/guess_game/: Cargo.toml
src/helloworld/: Cargo.toml
src/lua/: mod.rs  std.rs
tools/assets/: out
(+39 files in other folders)
