[package]
name = "bity-8"
version = "0.1.0"
authors = [
  "MikahJC <mikah.chapman@gmail.com>",
  "Alan Morgan <alanxoc3@gmail.com>",
  "Josh Backstein <josh.backstein@gmail.com"
]
publish = false

[lib]
name = "bity_8"
path = "src/engine/lib.rs"

[dependencies]
hlua = "0.3"
image = "0.19.0"
rand = "0.5"
bresenham = "0.1.1"

[dependencies.sdl2]
version = "0.31"
features = ["image", "gfx"]

[[bin]]
name = "bity-8"

[[bin]]
name = "convert-spritesheet"
